fix: change z-index of freeze component to make it appear above all components
changed the z-index value of #freeze id to 9999 so that it appears above all UI components

fixes #20538

(cherry picked from commit 96395d60dbc405b1fda1be3fe37ec7968aa8c1b9)

--- a/frappe/public/scss/desk/global.scss
+++ b/frappe/public/scss/desk/global.scss
@@ -414,7 +414,7 @@ kbd {
 
 // freeze backdrop text
 #freeze {
-	z-index: 1020;
+	z-index: 9999;
 	bottom: 0;
 	opacity: 0;
 	background-color: var(--bg-color);
